fix: bigger buttons on mobile

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -82,7 +82,7 @@
   }
 
   .about__cta {
-    grid-template-columns: max-content;
+    grid-template-columns: 1fr;
     gap: 12px;
   }
 
